@@ -2,11 +2,9 @@ public class TestInt {
 
 	Integer a = 1;
 
-	int b =
-    new Integer(1);
+	int b = Integer.valueOf(1);
 
 	int c = 1;
 
-    Integer d =
-    new Integer(1);
+    Integer d = Integer.valueOf(1);
 }
